[gd_scene load_steps=3 format=3 uid="uid://dhrbjendaxfys"]

[ext_resource type="Theme" uid="uid://brmsm8x6ntpna" path="res://theme/furnace_theme.tres" id="1_theme"]
[ext_resource type="Script" path="res://scripts/ui/level_export_dialog.gd" id="2_script"]

[node name="LevelExportDialog" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -140.0
offset_right = 150.0
offset_bottom = 140.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_theme")
script = ExtResource("2_script")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Export Level"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="LevelNameRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/LevelNameRow"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Level Name:"

[node name="LevelNameInput" type="LineEdit" parent="MarginContainer/VBoxContainer/LevelNameRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "New Level"

[node name="LevelNumberRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/LevelNumberRow"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Level Number:"

[node name="LevelNumberInput" type="SpinBox" parent="MarginContainer/VBoxContainer/LevelNumberRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
max_value = 999.0
value = 2.0

[node name="ResourcesRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/ResourcesRow"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Start Money:"

[node name="StartingResourcesInput" type="SpinBox" parent="MarginContainer/VBoxContainer/ResourcesRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
max_value = 9999.0
value = 100.0
suffix = " sparks"

[node name="HintLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Hint Text:"

[node name="HintTextInput" type="TextEdit" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
placeholder_text = "Optional hint shown at level start..."

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ButtonRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ExportButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonRow"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Export"

[node name="CancelButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonRow"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Cancel"
